--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
@@ -17,6 +18,7 @@
     "expo-image-picker": "^14.0.1",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "^2.8.0",
