--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.13",
     "expo-image-picker": "^14.0.1",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
     "formik": "^2.2.9",
     "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
