--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-alert-notification": "^0.3.4",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "4.3.1",
